[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/buildings/Building.gd" type="Script" id=1]
[ext_resource path="res://assets/UI_components/buildings/enter_inactive_green.png" type="Texture" id=2]

[node name="Building" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="Highlight" type="Sprite" parent="."]
visible = false
modulate = Color( 0.211765, 0.713726, 0.211765, 1 )

[node name="building" type="Sprite" parent="."]

[node name="Building_onclick" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="Enter_button" type="TextureButton" parent="Node2D"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -235.0
margin_right = 96.0
margin_bottom = -100.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="Building_onclick" to="." method="_on_Building_onclick_pressed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
